--- a/css/style.css
+++ b/css/style.css
@@ -152,10 +152,37 @@ address {
   overflow: hidden;
 }
 
-.container {
+.container, .popup__container {
   padding: 0 12px;
-  max-width: 600px;
   margin: 0 auto;
+}
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+}
+
+.btn {
+  padding: 0.75em 1em;
+  font-size: 1.2em;
+  border: black 0.2em solid;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.btn:active {
+  -webkit-transform: translateY(7%);
+          transform: translateY(7%);
+}
+
+.bg {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.bg._c {
+  background-size: contain;
 }
 
 /**********************
@@ -168,6 +195,10 @@ address {
   min-height: 100vh;
   background: -webkit-gradient(linear, right top, left top, from(#00f2fe), to(#4facfe));
   background: linear-gradient(270deg, #00f2fe 0%, #4facfe 100%);
+}
+
+.game__title {
+  font-size: 2rem;
 }
 
 .game__board {
@@ -192,6 +223,7 @@ address {
 .game__tile._revealed {
   border: 0.5rem solid transparent;
   background-color: grey;
+  cursor: auto;
 }
 
 .game__tile._flagged {
@@ -241,17 +273,118 @@ address {
 
 .mode {
   position: fixed;
-  right: 0;
   bottom: 0;
-  padding: 1rem;
-  cursor: pointer;
-  font-size: 2rem;
+  right: 0;
+}
+
+.mode__container {
+  padding: 2rem;
+  width: 9rem;
+  height: 9rem;
+}
+
+.mode__btn {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: whitesmoke;
+  border: black 0.5em solid;
+}
+
+.mode__img-layout {
+  width: 90%;
+  height: 90%;
+  background-image: url("../img/mine.png");
+}
+
+.mode__btn._flag .mode__img-layout {
+  background-image: url("../img/flag.png");
 }
 
 .mines-count {
   top: 0;
   left: 0;
   position: fixed;
-  padding: 1rem;
+}
+
+.mines-count__container {
+  padding: 2rem;
   font-size: 2rem;
+}
+
+.mines-count__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.mines-count__count {
+  margin-right: 0.5em;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.popup__container {
+  max-width: 768px;
+  height: 100%;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.popup__body {
+  width: 100%;
+  min-height: 480px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background: -webkit-gradient(linear, left bottom, left top, from(#37ecba), to(#72afd3));
+  background: linear-gradient(0deg, #37ecba 0%, #72afd3 100%);
+}
+
+.popup__title {
+  margin-bottom: 1.5em;
+  color: white;
+  line-height: 2;
+  text-align: center;
+  font-size: 1.5rem;
+}
+
+.popup__btn {
+  margin-bottom: 1em;
+  display: inline-block;
+  color: white;
+  background-color: #0a9aff;
+}
+
+.popup__btn:hover {
+  background-color: darkcyan;
 }
